--- a/review.adoc
+++ b/review.adoc
@@ -41,27 +41,25 @@ High level of expressiveness is made possible by the synergy of language propert
 
 > How closely does the notation correspond to the problem world?
 
-Historically, object-oriented programming (OOP) is a prevalent paradigm when it comes to GUI programmingfootnote:[See introductory chapter in Eugen Kiss' thesis.], the same holds with Red as well: hierarchical composition of stateful objects reflects the underlying structure of modeled graphical interface; prototype-based inheritance ensures that all faces have same properties (such as position, size, visibility), yet each instance is unique in the way said properties are used and customized; object ownership system and reactivity make real-time user interaction possible.
+Historically, object-oriented programming (OOP) is a prevalent paradigm when it comes to GUI programming,footnote:[See introductory chapter in Eugen Kiss' thesis.] the same holds with Red as well: hierarchical composition of stateful objects reflects the underlying structure of modeled graphical interface; prototype-based inheritance ensures that all faces have same properties (such as position, size, visibility), yet each instance is unique in the way said properties are used and customized; object ownership system and reactivity make real-time user interaction possible.
 
-Usage of actors and event-based model has a low conceptual overhead, since they rely on intuitive notions of causality and law of action-reaction.
+Usage of actors and event-based model has a low conceptual overhead, since they rely on intuitive notions of causality and law of action-reaction. Each face is modeled as a receiver of events being pushed onto it, and although face object has a complete control on how events are processed and reacted upon, the flow of events itself is outside of its purview.
 
-NOTE: TBD.
+This suffices for interface-building and programming in the small that View and VID are primarily designed for, but presents a challenging inversion of control for tasks of a larger scale, and those coming from different problem domains: where source of events produces more information than receiver can handle if they are forcefuly pushed onto it, thus clogging the throughput, such as real-time animation, asynchronous data processing, interaction with multiple network services.
 
-Red is considered paradigm-neutral, neither OO nor FP (the dichotomy that Eugen studies in his thesis). "Sustainability of FP in GUI development" ¶3.
+Again, historically, Functional Reactive Programming (FRP) is a paradigm that maps closely than OOP to this type of use-cases. Supporting FRP concepts in View presents an opportunity for Red to make a case for its paradigm-neutrality: port model coupled with embedded parsing engine and a rich set of datatypes provides a solid ground for creating an FRP-like Publish/Subscribe model based on pattern-matching event streams constructed from Red values.footnote:[A rudiment of this idea can be noticed in a reserved `system/view/event-port` field.]
 
-Event-based framework, matching architectures of underlying backends (Win32, Cocoa, GTK). FRP and reification of event flow. Inversion of control (pub/sub?): right now events are pushed onto face, but it can instead pull them itself periodically. Listener, stream of events and pattern-matching on it. Each reactor maps stream of events from listeners to its own stream (to which other reactors can listen). Ports? Async interactions with external resources, emphasis is on continious, not discrete. Rich set of datatypes for modelling events, can contain contextual info. Orchestration (duh) of distributed services.
-
-VID is declarative, description matches the visual layout. Anecdotal evidence of people understanding VID even without knowing Red.
-
-https://lobste.rs/s/1kxz55/puny_gui_puppy_finder#c_nzxgog
-
-And what is the "problem world"? So far Red was only concerned with small in-house applications. What about PITL, games, animation, plotting?
+When it comes to interface building, declarative VID specification tends to match the visual layout of widgets on the screen, and closely maps to a description that users themselves would provide when instantiating a GUI.footnote:[There exist an anecdotal https://lobste.rs/s/1kxz55/puny_gui_puppy_finder#c_nzxgog[evidence] of people understanding VID even without knowing Red.] And while VID covers static aspects of the GUI layout, support for dynamic features (such as adaptive resizing, flexboxes, spacers) is lacking. There exist user-made solutions for that,footnote:[See https://gitlab.com/hiiamboris/red-elastic-ui[Elastic UI] proof-of-concept.] but out-of-the-box, cross-platform support would be much preferrable and provide the lowest common denominator for use-cases that require adaptive layouts.
 
 #### Hidden dependencies
 
 > Are dependencies between entities in the notation visible or hidden? Is every dependency indicated in both directions? Does a change in one area of the notation lead to unexpected consequences?
 
 NOTE: TBD.
+
+Word's binding, shared series buffers, actor blocks as bodies of function with tacitly assumed arguments `face` and `event`, tacit assumption about the order of facet values in VID. Reactivity of facets. `pane` block and face's position in it, `parent`.
+
+Explicit `on-*` handlers, global handlers. 
 
 #### Error-proneness
 
@@ -241,7 +239,11 @@ Abstraction level -- abusing `field` as table cell widget and generating layout 
 
 NOTE: TBD.
 
-Creation of custom widgets with unique style (like e.g. material design) currently requires usage of `base` face, Draw dialect and external scaffolding in the form of event-processing and change-propagating code.footnote:[See Boleslav Březovský's http://red.qyz.cz/writing-style.html[article] on custom VID styles as an example.] Customization of the basic set of widgets is possible to a certain extent, but is ultimately limited due to specificities of underlying backends.
+WARNING: Most of this is a copypaste from other sections.
+
+NOTE: See also 'Ideas' folder on Notion.
+
+Creation of custom widgets with unique style (like e.g. material design) currently requires usage of `base` face, Draw dialect and external scaffolding in the form of event-processing and change-propagating code. Customization of the basic set of widgets is possible to a certain extent, but is ultimately limited due to specificities of underlying backends.
 
 ---
 
@@ -249,7 +251,15 @@ However, existing approach to GUI creation doesn't scale well beyond small appli
 
 Declarative style of VID is not modular and does not permit a level of flexibility necessary to handle large projects: visual layout of widgets, their properties and event-handling logic, while logically separate, tend to be conflated together at the level of VID description.
 
-Existing notation coupled with above-mentioned Red language properties provides means of addressing this concerns; conceptually, however, there seems to be a need for a eDSL with different type of semantics, and for an extension of graphical engine with more lightweight, platform-independent and customizable graphical primitives.footnote:[Such as http://www.rebol.com/r3/docs/view/gobs.html[Rebol3 Graphical Objects] (GOB).]
+Existing notation coupled with above-mentioned Red language properties provides means of addressing this concerns; conceptually, however, there seems to be a need for a eDSL with different type of semantics, and for an extension of graphical engine with more lightweight, platform-independent and customizable graphical primitives.footnote:[Such as http://www.rebol.com/r3/docs/view/gobs.html[Rebol3 Graphical Objects] (GOBs).]
+
+---
+
+Again, historically, Functional Reactive Programming (FRP) is a paradigm that maps closely than OOP to this type of use-cases. Supporting FRP concepts in View presents an opportunity for Red to make a case for its paradigm-neutrality: port model coupled with embedded parsing engine and a rich set of datatypes provides a solid ground for creating an FRP-like Publish/Subscribe model based on pattern-matching event streams constructed from Red values.
+
+---
+
+When it comes to interface building, declarative VID specification tends to match the visual layout of widgets on the screen, and closely maps to a description that users themselves would provide when instantiating a GUI. And while VID covers static aspects of the GUI layout, support for dynamic features (such as adaptive resizing, flexboxes, spacers) is lacking. There exist user-made solutions for that, but out-of-the-box, cross-platform support would be much preferrable and provide a lowest common denominator for use-cases that require adaptive layouts.
 
 ---
 
