--- a/README.adoc
+++ b/README.adoc
@@ -15,9 +15,9 @@ Other known implementations:
 
 ## Status
 
-All 7 challenges are completed and clock under 270 lines of code, barring script headers.
+All the 7 challenges are completed and clock under 270 lines of code, barring script headers.
 
-The project was tested on all supported View backends with Red https://github.com/red/red/commit/fe2ad5264f7286b831583055a551d72aaa880d7b[`fe2ad52`]; the following issues were found:
+The project was tested on all supported View backends with Red https://github.com/red/red/commit/32f10e8a3cb058fd3274bc024f65a809124dd699[`32f10e8`]; the following issues were found:
 
 .Known issues.
 [cols="1,1,6"]
@@ -35,6 +35,10 @@ The project was tested on all supported View backends with Red https://github.co
 |  GTK
 | link:tasks/CRUD.red[CRUD]
 | Some critical assertions are failing inside the GTK library.
+
+| GTK
+| link:tasks/cells.red[Cells]
+| Evaluation of self-referential formulas hangs the application.
 
 |===
 
